# rbotnet

./: Cargo.toml  README.md  buddy.json
client/: Cargo.toml
client/src/: main.rs
client/src/websocket/: client.rs  events.rs  mod.rs  session.rs
protocol/: Cargo.toml
protocol/src/commands/: command.rs  heartbeat.rs  mod.rs  request.rs
protocol/src/utils/: mod.rs
server/: Cargo.toml
server/src/: connection.rs  context.rs  lib.rs  log.rs  main.rs  server.rs  session.rs  types.rs
server/src/app/: mod.rs  routes.rs
server/src/app/clients/: routes.rs
server/src/app/commands/: routes.rs
server/src/websocket/: messages.rs  mod.rs  server.rs  session.rs
src/: lib.rs
src/cmd/: command.rs  frame.rs  mod.rs  parse.rs
src/cmd/admin/get/: mod.rs  sessions.rs
src/server/: admin_server.rs  admin_session.rs  mod.rs  server.rs  session.rs  state.rs
