[package]
name = "rbotnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", default-features = true, features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
structured-logger = "1.0.3"
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.15"
futures = "0.3.30"

[[bin]]
name = "rbnet_server"

[[bin]]
name = "rbnet_client"
