[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "3.4.0"
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
futures-util = "0.3.30"
log = "0.4.21"
protocol = { path = "../protocol" }
actix-codec = "0.5.2"
actix-rt = "2.9.0"
tokio = "1.37.0"
