[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
futures = "0.3.30"
env_logger = "0.11.3"
log = "0.4.21"
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", default-features = true, features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
